--- a/src/demo/5-post-request.yml
+++ b/src/demo/5-post-request.yml
@@ -24,3 +24,5 @@ scenarios:
       - log: "There is a {{probability}}% chance that {{FirstName}} {{LastName}} is a {{gender}}"
 
   # Run:    artillery run -q src/demo/5-post-request.yml
+
+  # INFO: https://www.artillery.io/docs/guides/guides/http-reference#function-signatures
