--- a/src/demo/4-csv.yml
+++ b/src/demo/4-csv.yml
@@ -24,3 +24,5 @@ scenarios:
       - log: "There is a {{response_probability}} in 1 change that {{FirstName}} {{LastName}} is a {{response_gender}}"
 
   # Run:    artillery run -q src/demo/4-csv.yml
+
+  # INFO: https://www.artillery.io/docs/guides/guides/test-script-reference#payload---data-from-csv
